<resources>

    <!-- File name -->

    <string name="app_name">MAD Meditation</string>

    <!-- Onboarding -->

    <string name="onboardingWelcomeTextHeader">Привет</string>
    <string name="onboardingWelcomeTextBody">Наслаждайся отборочными. \n Будь внимателен. \n Делай хорошо.</string>
    <string name="onboardingLoginAccount">Войти в аккаунт</string>
    <string name="onboardingNoAccountHint">Еще нет аккаунта?</string>
    <string name="onboardingNoAccountHintRegistration">Зарегистрируйтесь</string>

    <!-- Login -->

    <string name="loginTextHeader">Sign In</string>
    <string name="loginEmailHint">Email</string>
    <string name="loginPasswordHint">Пароль</string>
    <string name="loginAccountLogin">Sign in</string>
    <string name="loginAccountRegister">Register</string>
    <string name="loginAccountProfile">Профиль</string>

    <!-- Register -->

    <string name="registerTextHeader">Sign up</string>
    <string name="registerNameHint">Имя</string>
    <string name="registerEmailHint">Email</string>
    <string name="registerPasswordHint">Пароль</string>
    <string name="registerRepeatPasswordHint">Повторите пароль</string>
    <string name="registerAccountRegister">Sign up</string>
    <string name="registerAccountNotRegister">У меня уже есть аккаунт</string>

    <!-- Main -->

    <string name="mainWelcomeText">С возвращением, User!</string>
    <string name="mainAfterWelcomeText">Каким ты себя ощущаешь сегодня?</string>

    <!-- Profile -->

    <string name="profileExitText">exit</string>
    <string name="profileUserText">User</string>

    <!-- Gallery -->

    <string name="galleryDeleteText">удалить</string>
    <string name="galleryCloseText">закрыть</string>

    <!-- Mock -->

    <string name="registrationTextMock">Тут будет \nрегистрация</string>
    <string name="listenTextMock">Тут будет \nпрослушивание</string>
    <string name="menuTextMock">Тут будет меню</string>

</resources>