<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="43.41dp"
        android:layout_height="49dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/groupImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/group_28" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/alegreyasans_new"
        android:text="@string/registerTextHeader"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <EditText
        android:id="@+id/nameInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="email"
        android:backgroundTint="@color/textColorGray"
        android:ems="10"
        android:fontFamily="@font/alegreyasans_medium"
        android:hint="@string/registerNameHint"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColorGray"
        android:textColorHint="@color/textColorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <EditText
        android:id="@+id/emailInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="email"
        android:backgroundTint="@color/textColorGray"
        android:ems="10"
        android:fontFamily="@font/alegreyasans_medium"
        android:hint="@string/registerEmailHint"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColorGray"
        android:textColorHint="@color/textColorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputField" />

    <EditText
        android:id="@+id/passwordInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="email"
        android:backgroundTint="@color/textColorGray"
        android:ems="10"
        android:fontFamily="@font/alegreyasans_medium"
        android:hint="@string/registerPasswordHint"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColorGray"
        android:textColorHint="@color/textColorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputField" />

    <EditText
        android:id="@+id/repeatPasswordInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="email"
        android:backgroundTint="@color/textColorGray"
        android:ems="10"
        android:fontFamily="@font/alegreyasans_medium"
        android:hint="@string/registerRepeatPasswordHint"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColorGray"
        android:textColorHint="@color/textColorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputField" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="51dp"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/alegreyasans_medium"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="16dp"
        android:paddingBottom="15dp"
        android:text="@string/registerAccountRegister"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordInputField" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="39dp"
        android:textAlignment="textStart"
        android:background="@android:color/transparent"
        android:fontFamily="@font/alegreyasans_medium"
        android:letterSpacing="0"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/registerAccountNotRegister"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regButton" />

</androidx.constraintlayout.widget.ConstraintLayout>